# pulumi-rust

./: .editorconfig  .gitignore  AGENTS.md  CLAUDE.md  Cargo.toml  LICENSE  Makefile  README.md
crates/pulumi-azure-native-generated/: Cargo.toml
crates/pulumi-azure-native-generated/src/: admin_rule_collection.rs  application_gateway_private_endpoint_connection.rs  application_security_group.rs  azure_firewall.rs  azure_power_shell_script.rs  blob_container_immutability_policy.rs  connectivity_configuration.rs  ddos_custom_policy.rs  ddos_protection_plan.rs  default_admin_rule.rs  default_user_rule.rs  deployment.rs  deployment_at_management_group_scope.rs  deployment_at_tenant_scope.rs  deployment_stack_at_resource_group.rs  deployment_stack_at_subscription.rs  deployment_stacks_what_if_results_at_resource_group.rs  express_route_circuit_authorization.rs  express_route_circuit_connection.rs  express_route_circuit_peering.rs  express_route_connection.rs  express_route_port_authorization.rs  firewall_policy.rs  firewall_policy_draft.rs  firewall_policy_rule_collection_group.rs  firewall_policy_rule_collection_group_draft.rs  hub_route_table.rs  inbound_nat_rule.rs  ip_allocation.rs  lib.rs  local_network_gateway.rs  management_group_network_manager_connection.rs  management_policy.rs  mod.rs  nat_gateway.rs  network_group.rs  network_security_group.rs  network_security_perimeter_link.rs  network_watcher.rs  nsp_association.rs  (+29 more)
crates/pulumi-azure-native-generated/src/functions/: get_admin_rule.rs  get_application_gateway.rs  get_application_gateway_backend_health_on_demand.rs  get_application_security_group.rs  get_azure_cli_script.rs  get_azure_firewall.rs  get_blob_container_immutability_policy.rs  get_blob_inventory_policy.rs  get_blob_service_properties.rs  get_connection_monitor.rs  get_connectivity_configuration.rs  get_custom_ip_prefix.rs  get_ddos_custom_policy.rs  get_ddos_protection_plan.rs  get_default_admin_rule.rs  get_deployment.rs  get_deployment_at_management_group_scope.rs  get_deployment_at_scope.rs  get_deployment_at_subscription_scope.rs  get_deployment_stack_at_management_group.rs  get_deployment_stack_at_subscription.rs  get_deployment_stacks_what_if_results_at_management_group.rs  get_deployment_stacks_what_if_results_at_subscription.rs  get_dscp_configuration.rs  get_encryption_scope.rs  get_express_route_circuit.rs  get_express_route_circuit_authorization.rs  get_express_route_circuit_connection.rs  get_express_route_gateway.rs  get_express_route_port_authorization.rs  get_file_share.rs  get_firewall_policy_draft.rs  get_firewall_policy_rule_collection_group.rs  get_flow_log.rs  get_hub_virtual_network_connection.rs  get_inbound_nat_rule.rs  get_ip_allocation.rs  get_ipam_pool.rs  get_load_balancer.rs  get_network_group.rs  (+57 more)
crates/pulumi-azure-native-generated/src/network/: admin_rule.rs  application_gateway.rs  bastion_host.rs  configuration_policy_group.rs  connection_monitor.rs  custom_ip_prefix.rs  dscp_configuration.rs  express_route_circuit.rs  express_route_cross_connection_peering.rs  express_route_gateway.rs  express_route_port.rs  firewall_policy_rule_group.rs  flow_log.rs  hub_virtual_network_connection.rs  interface_endpoint.rs  ip_group.rs  ipam_pool.rs  load_balancer.rs  load_balancer_backend_address_pool.rs  mod.rs  nat_rule.rs  network_interface.rs  network_interface_tap_configuration.rs  network_manager.rs  network_manager_routing_configuration.rs  network_profile.rs  network_security_perimeter.rs  network_security_perimeter_access_rule.rs  network_security_perimeter_association.rs  network_security_perimeter_logging_configuration.rs  network_security_perimeter_profile.rs  network_virtual_appliance.rs  (+41 more)
crates/pulumi-codegen/: Cargo.toml
crates/pulumi-codegen-cli/: Cargo.toml
crates/pulumi-codegen-cli/src/: main.rs
crates/pulumi-codegen/src/: complex_types.rs  enums.rs  format.rs  functions.rs  lib.rs  modules.rs  naming.rs  provider.rs  resources.rs  schema.rs  types.rs
crates/pulumi-codegen/tests/: golden_tests.rs
crates/pulumi-language-rust/: Cargo.toml
crates/pulumi-language-rust/src/: main.rs
crates/pulumi-sdk/: Cargo.toml
crates/pulumi-sdk-test/: Cargo.toml
crates/pulumi-sdk-test/src/: integration.rs  lib.rs  mock_monitor.rs
crates/pulumi-sdk-test/tests/: integration_test.rs  mock_test.rs
crates/pulumi-sdk/src/: asset.rs  config.rs  context.rs  error.rs  grpc_client.rs  input.rs  invoke.rs  lib.rs  output.rs  package.rs  provider_resource.rs  resolve.rs  resource_options.rs  serialize.rs  stack_reference.rs
examples/azure-resource-group/: Cargo.toml  Pulumi.yaml
examples/azure-resource-group/src/: main.rs
examples/random-strings/: Cargo.toml  Pulumi.yaml
examples/random-strings/src/: main.rs
(+8543 files in other folders)
