[workspace]
resolver = "2"
members = [
    "crates/pulumi-proto",
    "crates/pulumi-sdk",
    "crates/pulumi-random",
    "crates/pulumi-language-rust",
    "examples/random-strings",
]

[workspace.package]
edition = "2021"
license = "Apache-2.0"
repository = "https://github.com/example/pulumi-rust"

[workspace.dependencies]
anyhow = "1"
thiserror = "2"
tokio = { version = "1", features = ["full"] }
tonic = "0.12"
tonic-build = "0.12"
prost = "0.13"
prost-types = "0.13"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tracing = "0.1"
tracing-subscriber = "0.3"
