[package]
name = "pulumi-azure-native-generated"
version = "3.16.0"
edition = "2021"

[dependencies]
pulumi-sdk = { path = "../pulumi-sdk" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[features]
default = ["resources", "network", "storage"]
resources = []
network = []
storage = []
