[package]
name = "pulumi-codegen-cli"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "CLI tool for generating Rust provider crates from Pulumi schemas"

[[bin]]
name = "pulumi-codegen-rust"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
pulumi-codegen = { path = "../pulumi-codegen" }
serde_json = { workspace = true }
