[package]
name = "pulumi-codegen"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Pulumi schema-driven code generation for Rust"

[dependencies]
prettyplease = "0.2"
serde = { workspace = true }
serde_json = { workspace = true }
syn = { version = "2", features = ["full", "parsing"] }
thiserror = { workspace = true }

[dev-dependencies]
