[package]
name = "pulumi-language-rust"
version = "0.1.0"
edition.workspace = true
license.workspace = true

[dependencies]
pulumi-proto = { path = "../pulumi-proto" }
anyhow = { workspace = true }
tokio = { workspace = true }
tokio-stream = "0.1"
tonic = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
