[package]
name = "pulumi-sdk-test"
version = "0.1.0"
edition.workspace = true
license.workspace = true

[dependencies]
pulumi-sdk = { path = "../pulumi-sdk" }
pulumi-proto = { path = "../pulumi-proto" }
prost-types = { workspace = true }
tokio = { workspace = true }
tokio-stream = "0.1"
tonic = { workspace = true }
serde_json = { workspace = true }
