[package]
name = "pulumi-sdk"
version = "0.1.0"
edition.workspace = true
license.workspace = true

[dependencies]
pulumi-proto = { path = "../pulumi-proto" }
thiserror = { workspace = true }
tokio = { workspace = true }
tonic = { workspace = true }
prost = { workspace = true }
prost-types = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
