[package]
name = "random-strings"
version = "0.1.0"
edition.workspace = true

[dependencies]
pulumi-sdk = { path = "../../crates/pulumi-sdk" }
pulumi_random = { path = "../../crates/pulumi-random-generated", package = "pulumi-random-generated" }
tokio = { workspace = true }
serde_json = { workspace = true }
